# waffle-tx2

./: README.md
burger_tx2_waypoints/: CMakeLists.txt  package.xml
burger_tx2_waypoints/scripts/: test_server.py
burger_tx2_waypoints/scripts/rc/: index.html  robot_status_change.html  robot_status_query.html  waypoints_travel.html
waffle_tx2_navigation/: CMakeLists.txt  package.xml
waffle_tx2_navigation/launch/: bringup.launch  standalone.launch  zed.launch
waffle_tx2_navigation/src/: .navigation_node.cpp.swn  .navigation_node.cpp.swo  .navigation_node.hpp.swn  .navigation_node.hpp.swo  navigation_node.cpp  navigation_node.hpp
waffle_tx2_tf2/: CMakeLists.txt  compile_commands.json  frames.gv  package.xml
waffle_tx2_tf2/config/: cartographer.lua
waffle_tx2_tf2/launch/: bringup.launch  cartographer.launch  elevation_mapping.launch  frames.gv  gps.launch  localize.launch  tb3.launch  tb3_teleop.launch  tb3_world.launch  tf2.launch  tf2_odom.launch  tf2_static.launch  video_server.launch  zed.launch
waffle_tx2_tf2/src/: init_localization_tf2_node.cpp  republish_imu_node.cpp  tf2_imu_node.cpp  tf2_odom_node.cpp  tf2_scan_node.cpp  tf2_static_node.cpp  tf2_sync_odom_node.cpp  tf2_zed_node.cpp
