<package>
  <name>waffle_tx2_navigation</name>
  <version>0.0.0</version>
  <description>A navigation package for the Waffle TX2.</description>
  <maintainer email="maestro@tachibanatech.com">Sam Dauchert and Chris McKinney</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend> 
  <build_depend>nav_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend> 
  <run_depend>nav_msgs</run_depend>
</package>
